--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "3.4.3",
     "react-wheel-of-prizes": "1.0.6",
     "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "2.0.1"
+    "semantic-ui-react": "2.0.1",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "typescript": "3.8.3"
