--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^1.4.0",
+    "http-proxy-middleware": "^2.0.6",
     "react": "17.0.0",
     "react-confetti": "6.1.0",
     "react-dom": "17.0.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "3.4.3",
     "react-wheel-of-prizes": "1.0.6",
     "semantic-ui-css": "2.4.1",
