--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "src/index.js",
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
     "react": "17.0.0",
     "react-confetti": "6.1.0",
