--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "emailjs-com": "^3.2.0",
     "http-proxy-middleware": "^2.0.6",
+    "nodemailer": "^6.7.7",
     "react": "17.0.0",
     "react-confetti": "6.1.0",
     "react-dom": "17.0.0",
@@ -19,6 +22,7 @@
     "react-wheel-of-prizes": "1.0.6",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "2.0.1",
+    "sheet2api-js": "^0.6.1",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
