--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "nodemailer": "^6.7.7",
     "react": "17.0.1",
     "react-confetti": "6.1.0",
-    "react-dom": "17.0.0",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "3.4.3",
     "react-wheel-of-prizes": "1.0.6",
